@@ -1,3 +1,11 @@
+2008-06-21  Robert Millan  <rmh@aybabtu.com>
+
+	* util/grub.d/00_header.in: Move last prepare_grub_to_access_device()
+	call from here ...
+
+	* util/grub.d/10_hurd.in: ... to here ...
+	* util/grub.d/10_linux.in: ... and here.
+
 2008-06-19  Robert Millan  <rmh@aybabtu.com>
 
 	* kern/main.c (grub_main): Export `prefix' variable inmediately
